--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Get Feed
 
 on:
   schedule:
-    - cron: '30 12 * * *' # 8am PST
+    - cron: '0 * * * *' # 8am PST
   workflow_dispatch:
 
 jobs:
